--- a/index.html
+++ b/index.html
@@ -4,10 +4,59 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Viajes chile</title>
-    
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="assets/css/style.css">
 </head>
+<section id="section1">
+    <div class="contenedor-fluid">
+         <nav class="navbar navbar-expand-lg navbar-light bg-transparent fixed-top">
+            <img src ="assets/img/viajes.svg" alt="logo" class="logo-viajechile" >
+          <a class="navbar-brand " href="#">Viajes Chile</a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+         <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav ml-auto mb-2 mb-lg-0" >
+              <li class="nav-item active ">
+                <a class="nav-link  text-white " href="#">Inicio</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link  text-white" href="#">Quienes somos</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link text-white" href="#">Destacados</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link disabled text-white" href="#" tabindex="-1" aria-disabled="true">Contacto</a>
+              </li>
+            </ul> 
+          </div>
+        </nav>
+        <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel" >
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <img src="assets/img/carousel1.jpg" class=" w-100" alt="...">
+              </div>
+              <div class="carousel-item">
+                <img src="assets/img/carousel2.jpg" class=" w-100" alt="...">
+              </div>
+              <div class="carousel-item">
+                <img src="assets/img/carousel3.jpg" class=" w-100" alt="...">
+              </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Next</span>
+            </button>
 
+</section>
+<section id="section1"></section>
+<section id="section1"></section>
 <body>
-    
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
