--- a/index.html
+++ b/index.html
@@ -52,9 +52,18 @@
               <span class="carousel-control-next-icon" aria-hidden="true"></span>
               <span class="visually-hidden">Next</span>
             </button>
+</section>
+<header>
+<section id="section2">
+    <div class="conteiner"></div>
+ <p>QUIENES SOMOS</p>
+ <hr>
+ 
+
 
 </section>
-<section id="section1"></section>
+
+</header>
 <section id="section1"></section>
 <body>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
