--- a/index.html
+++ b/index.html
@@ -1,71 +1,103 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Viajes chile</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <section id="section1">
     <div class="contenedor-fluid">
-         <nav class="navbar navbar-expand-lg navbar-light bg-transparent fixed-top">
-            <img src ="assets/img/viajes.svg" alt="logo" class="logo-viajechile" >
-          <a class="navbar-brand " href="#">Viajes Chile</a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-         <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav ml-auto mb-2 mb-lg-0" >
-              <li class="nav-item active ">
-                <a class="nav-link  text-white " href="#">Inicio</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link  text-white" href="#">Quienes somos</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link text-white" href="#">Destacados</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link disabled text-white" href="#" tabindex="-1" aria-disabled="true">Contacto</a>
-              </li>
-            </ul> 
-          </div>
-        </nav>
-        <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel" >
-            <div class="carousel-inner">
-              <div class="carousel-item active">
-                <img src="assets/img/carousel1.jpg" class=" w-100" alt="...">
-              </div>
-              <div class="carousel-item">
-                <img src="assets/img/carousel2.jpg" class=" w-100" alt="...">
-              </div>
-              <div class="carousel-item">
-                <img src="assets/img/carousel3.jpg" class=" w-100" alt="...">
-              </div>
-            </div>
-            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
-              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-              <span class="visually-hidden">Previous</span>
+        <nav class="navbar navbar-expand-lg navbar-light bg-transparent fixed-top">
+            <img src="assets/img/viajes.svg" alt="logo" class="logo-viajechile">
+            <a class="navbar-brand " href="#">Viajes Chile</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+                aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
             </button>
-            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
-              <span class="carousel-control-next-icon" aria-hidden="true"></span>
-              <span class="visually-hidden">Next</span>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav ml-auto mb-2 mb-lg-0">
+                    <li class="nav-item active ">
+                        <a class="nav-link  text-white " href="#">Inicio</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link  text-white" href="#">Quienes somos</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link text-white" href="#">Destacados</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link disabled text-white" href="#" tabindex="-1" aria-disabled="true">Contacto</a>
+                    </li>
+                </ul>
+            </div>
+        </nav>
+        <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <img src="assets/img/carousel1.jpg" class=" w-100" alt="...">
+                </div>
+                <div class="carousel-item">
+                    <img src="assets/img/carousel2.jpg" class=" w-100" alt="...">
+                </div>
+                <div class="carousel-item">
+                    <img src="assets/img/carousel3.jpg" class=" w-100" alt="...">
+                </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls"
+                data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls"
+                data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
             </button>
 </section>
 <header>
-<section id="section2">
-    <div class="conteiner"></div>
- <p>QUIENES SOMOS</p>
- <hr>
- 
-
-
-</section>
+    <section id="section2">
+        <div class="texto">QUIENES SOMOS</div>
+        <br>
+        <div class="parrafos">
+            <link rel="icon" type="image/png" href="assets/img/aiplane.png">
+            <p class="text1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga illo possimus ipsum cumque
+                libero! Aliquam,consequatur a odit cum quibusdam aliquid reiciendis velit non unde repellat ipsum,
+                obcaecati,
+                perferendis quidem Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam provident fuga
+                veniam delectus? Dolores, et. Accusantium, nemo, voluptas quam cupiditate vitae maiores consectetur
+                beatae nostrum sunt numquam dignissimos atque sed.</p>
+            <div class=">parrafos"></div>
+            <p class="text2">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Provident reiciendis quas minima
+                soluta, sequi,
+                deserunt quam praesentium at quasi facere laboriosam similique. Ipsam ex, labore natus nemo possimus
+                esse laboriosam Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet nam, rem pariatur illo
+                temporibus magni repellat inventore fuga porro dolorum laudantium perferendis a laborum expedita,
+                obcaecati nostrum voluptates maiores tempora?</p>
+            <img src="assets/img/mountain.png" class="icono">
+            <div class="parrafos"></div>
+            <img src="assets/img/road.png" class="icono">
+            <p class="text3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis omnis, earum debitis
+                maiores quos
+                voluptate fugiat ab in aut obcaecati, pariatur rerum iusto ipsam impedit iure nam, iste numquam minus
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Deleniti sunt distinctio sint vero, inventore
+                aspernatur veniam numquam deserunt perferendis rerum ipsam voluptatum in accusantium est voluptates,
+                laborum nobis earum aliquam.
+            </p>
+        </div>
+    </section>
 
 </header>
 <section id="section1"></section>
+
 <body>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"></script>
 </body>
+
 </html>
