--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Viajes chile</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <script src="https://kit.fontawesome.com/3f8f995c91.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <section id="section1">
@@ -58,38 +59,54 @@
                 <span class="carousel-control-next-icon" aria-hidden="true"></span>
                 <span class="visually-hidden">Next</span>
             </button>
+
+            <div class="text conteiner">
+                <h4 id="quienesSomos">¿Quiénes somos</h4>
+                <hr class="linea responsive-img">
+            </div>
 </section>
-<header>
-    <section id="section2">
-        <div class="texto">QUIENES SOMOS</div>
-        <br>
-        <div class="parrafos">
-            <link rel="icon" type="image/png" href="assets/img/aiplane.png">
-            <p class="text1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga illo possimus ipsum cumque
-                libero! Aliquam,consequatur a odit cum quibusdam aliquid reiciendis velit non unde repellat ipsum,
-                obcaecati,
-                perferendis quidem Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam provident fuga
-                veniam delectus? Dolores, et. Accusantium, nemo, voluptas quam cupiditate vitae maiores consectetur
-                beatae nostrum sunt numquam dignissimos atque sed.</p>
-            <div class=">parrafos"></div>
-            <p class="text2">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Provident reiciendis quas minima
-                soluta, sequi,
-                deserunt quam praesentium at quasi facere laboriosam similique. Ipsam ex, labore natus nemo possimus
-                esse laboriosam Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet nam, rem pariatur illo
-                temporibus magni repellat inventore fuga porro dolorum laudantium perferendis a laborum expedita,
-                obcaecati nostrum voluptates maiores tempora?</p>
-            <img src="assets/img/mountain.png" class="icono">
-            <div class="parrafos"></div>
-            <img src="assets/img/road.png" class="icono">
-            <p class="text3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis omnis, earum debitis
-                maiores quos
-                voluptate fugiat ab in aut obcaecati, pariatur rerum iusto ipsam impedit iure nam, iste numquam minus
-                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Deleniti sunt distinctio sint vero, inventore
-                aspernatur veniam numquam deserunt perferendis rerum ipsam voluptatum in accusantium est voluptates,
-                laborum nobis earum aliquam.
-            </p>
+<!---columnas de texto--->
+<section id="section2">
+    <section class="text">
+        <div class="conteiner">
+            <div class="row justify-content-md-center">
+                <!---columna izquierda--->
+                <div class="col11 col-sm col-lg">
+                    <div class="icon1"> <i class=""></i><i class="fa-solid fa-plane"></i></div>
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. At aut similique ex praesentium atque
+                    aliquam facilis eum quibusdam quis dolorum debitis, libero quidem vel eaque ab et pariatur.
+                    Mollitia, quos Lorem, ipsum dolor sit amet consectetur adipisicing elit. Porro aliquam corrupti ipsa
+                    velit sunt necessitatibus debitis nostrum deleniti reiciendis, dolorum similique facere enim
+                    distinctio, fugit possimus. Recusandae obcaecati porro nostrum?
+                 </div>
+                 <!---columna centro--->
+                 <div class="col11 col-sm col-lg">
+                    <div class="icon2"> <i class=""></i><i class="fa-solid fa-mountain"></i></div>
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. At aut similique ex praesentium atque
+                    aliquam facilis eum quibusdam quis dolorum debitis, libero quidem vel eaque ab et pariatur.
+                    Mollitia, quos Lorem, ipsum dolor sit amet consectetur adipisicing elit. Porro aliquam corrupti ipsa
+                    velit sunt necessitatibus debitis nostrum deleniti reiciendis, dolorum similique facere enim
+                    distinctio, fugit possimus. Recusandae obcaecati porro nostrum?
+                </div>
+                <!---columna derecha--->
+                <div class="col11 col-sm col-lg">
+                    <div class="icon1"> <i class=""></i><i class="fa-solid fa-route"></i></div>
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. At aut similique ex praesentium atque
+                    aliquam facilis eum quibusdam quis dolorum debitis, libero quidem vel eaque ab et pariatur.
+                    Mollitia, quos Lorem, ipsum dolor sit amet consectetur adipisicing elit. Porro aliquam corrupti ipsa
+                    velit sunt necessitatibus debitis nostrum deleniti reiciendis, dolorum similique facere enim
+                    distinctio, fugit possimus. Recusandae obcaecati porro nostrum?
+                </div>
+            </div>
         </div>
     </section>
+
+
+
+
+
+
+</section>
 
 </header>
 <section id="section1"></section>
