--- a/index.html
+++ b/index.html
@@ -100,6 +100,12 @@
             </div>
         </div>
     </section>
+    <!-- Línea horizontal divisoria -->
+    <div class="container">
+        <h4 id="destacados">Destacados</h4>
+        <hr class="linea"/>
+    </div>
+
 
 
 
