--- a/index.html
+++ b/index.html
@@ -100,11 +100,6 @@
     </div>
   </section>
 </section>
-<form class="container" action="index.html" method="post">
-  <div class="typeform-widget" data-url="https://form.typeform.com/to/FBckfj?typeform-medium=embed-snippet"
-    style="width: 100%; height: 500px;"></div>
-  <script> (function () { var qs, js, q, s, d = document, gi = d.getElementById, ce = d.createElement, gt = d.getElementsByTagName, id = "typef_orm", b = "https://embed.typeform.com/"; if (!gi.call(d, id)) { js = ce.call(d, "script"); js.id = id; js.src = b + "embed.js"; q = gt.call(d, "script")[0]; q.parentNode.insertBefore(js, q) } })() </script>
-</form>
 </header>
 <!-- Línea horizontal divisoria -->
 <div class="container">
@@ -160,6 +155,26 @@
   <hr class="linea" />
 </div>
 
+<h4 id="contacto" class="container">Contacto</h4>
+
+<!-- Formulario de contacto -->
+<form class="form-contenedor">
+<div class="mb-3">
+  <label for="exampleFormControlInput1" class="form-label">nombre</label>
+  <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="">
+</div>
+<div class="mb-3">
+  <label for="exampleFormControlInput1" class="form-label">Asunto</label>
+  <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="">
+</div>
+<div class="mb-3">
+  <label for="exampleFormControlTextarea1" class="form-label">mensaje</label>
+  <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+</div>
+<button type="button" class="btn btn-secondary" data-bs-toggle="tooltip" data-bs-placement="left" data-bs-title="Tooltip on left">
+  Enviar 
+</button>
+</form>
 
 <section id="section3">
   <footer>
