--- a/index.html
+++ b/index.html
@@ -2,128 +2,120 @@
 <html lang="es">
 
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Viajes chile</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-  <script src="https://kit.fontawesome.com/3f8f995c91.js" crossorigin="anonymous"></script>
-  <link rel="stylesheet" href="assets/css/style.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Viajes chile</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <script src="https://kit.fontawesome.com/3f8f995c91.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <section id="section1">
-  <div class="contenedor-fluid">
-    <nav class="navbar navbar-expand-lg navbar-light bg-transparent fixed-top">
-      <img src="assets/img/viajes.svg" alt="logo" class="logo-viajechile">
-      <a class="navbar-brand " href="#">Viajes Chile</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
-        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav ml-auto mb-2 mb-lg-0">
-          <li class="nav-item active ">
-            <a class="nav-link  text-white " href="#">Inicio</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link  text-white" href="#">Quienes somos</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link text-white" href="#">Destacados</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link disabled text-white" href="#" tabindex="-1" aria-disabled="true">Contacto</a>
-          </li>
-        </ul>
-      </div>
-    </nav>
-    <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
-      <div class="carousel-inner">
-        <div class="carousel-item active">
-          <img src="assets/img/carousel1.jpg" class=" w-100" alt="...">
-        </div>
-        <div class="carousel-item">
-          <img src="assets/img/carousel2.jpg" class=" w-100" alt="...">
-        </div>
-        <div class="carousel-item">
-          <img src="assets/img/carousel3.jpg" class=" w-100" alt="...">
-        </div>
-      </div>
-      <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls"
-        data-bs-slide="prev">
-        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-        <span class="visually-hidden">Previous</span>
-      </button>
-      <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls"
-        data-bs-slide="next">
-        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-        <span class="visually-hidden">Next</span>
-      </button>
+    <div class="contenedor-fluid">
+        <nav class="navbar navbar-expand-lg navbar-light bg-transparent fixed-top">
+            <img src="assets/img/viajes.svg" alt="logo" class="logo-viajechile">
+            <a class="navbar-brand " href="#">Viajes Chile</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+                aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav ml-auto mb-2 mb-lg-0">
+                    <li class="nav-item active ">
+                        <a class="nav-link  text-white " href="#">Inicio</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link  text-white" href="#">Quienes somos</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link text-white" href="#">Destacados</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link disabled text-white" href="#" tabindex="-1" aria-disabled="true">Contacto</a>
+                    </li>
+                </ul>
+            </div>
+        </nav>
+        <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <img src="assets/img/carousel1.jpg" class=" w-100" alt="...">
+                </div>
+                <div class="carousel-item">
+                    <img src="assets/img/carousel2.jpg" class=" w-100" alt="...">
+                </div>
+                <div class="carousel-item">
+                    <img src="assets/img/carousel3.jpg" class=" w-100" alt="...">
+                </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls"
+                data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls"
+                data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+            </button>
 
-      <div class="text conteiner">
-        <h4 id="quienesSomos">¿Quiénes somos</h4>
-        <hr class="linea responsive-img">
-      </div>
+            <div class="text conteiner">
+                <h4 id="quienesSomos">¿Quiénes somos</h4>
+                <hr class="linea responsive-img">
+            </div>
 </section>
 <!---columnas de texto--->
 <section id="section2">
-  <section class="text">
-    <div class="conteiner">
-      <div class="row justify-content-md-center">
-        <!---columna izquierda--->
-        <div class="col11 col-sm col-lg">
-          <div class="icon1"> <i class=""></i><i class="fa-solid fa-plane"></i></div>
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit. At aut similique ex praesentium atque
-          aliquam facilis eum quibusdam quis dolorum debitis, libero quidem vel eaque ab et pariatur.
-          Mollitia, quos Lorem, ipsum dolor sit amet consectetur adipisicing elit. Porro aliquam corrupti ipsa
-          velit sunt necessitatibus debitis nostrum deleniti reiciendis, dolorum similique facere enim
-          distinctio, fugit possimus. Recusandae obcaecati porro nostrum?
+    <section class="text">
+        <div class="conteiner">
+            <div class="row justify-content-md-center">
+                <!---columna izquierda--->
+                <div class="col11 col-sm col-lg">
+                    <div class="icon1"> <i class=""></i><i class="fa-solid fa-plane"></i></div>
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. At aut similique ex praesentium atque
+                    aliquam facilis eum quibusdam quis dolorum debitis, libero quidem vel eaque ab et pariatur.
+                    Mollitia, quos Lorem, ipsum dolor sit amet consectetur adipisicing elit. Porro aliquam corrupti ipsa
+                    velit sunt necessitatibus debitis nostrum deleniti reiciendis, dolorum similique facere enim
+                    distinctio, fugit possimus. Recusandae obcaecati porro nostrum?
+                 </div>
+                 <!---columna centro--->
+                 <div class="col11 col-sm col-lg">
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. At aut similique ex praesentium atque
+                    aliquam facilis eum quibusdam quis dolorum debitis, libero quidem vel eaque ab et pariatur.
+                    Mollitia, quos Lorem, ipsum dolor sit amet consectetur adipisicing elit. Porro aliquam corrupti ipsa
+                    velit sunt necessitatibus debitis nostrum deleniti reiciendis, dolorum similique facere enim
+                    distinctio, fugit possimus. Recusandae obcaecati porro nostrum?
+                    <div class="icon2"> <i class=""></i><i class="fa-solid fa-mountain"></i></div>
+                </div>
+                <!---columna derecha--->
+                <div class="col11 col-sm col-lg">
+                    <div class="icon1"> <i class=""></i><i class="fa-solid fa-route"></i></div>
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. At aut similique ex praesentium atque
+                    aliquam facilis eum quibusdam quis dolorum debitis, libero quidem vel eaque ab et pariatur.
+                    Mollitia, quos Lorem, ipsum dolor sit amet consectetur adipisicing elit. Porro aliquam corrupti ipsa
+                    velit sunt necessitatibus debitis nostrum deleniti reiciendis, dolorum similique facere enim
+                    distinctio, fugit possimus. Recusandae obcaecati porro nostrum?
+                </div>
+            </div>
         </div>
-<<<<<<< HEAD
     </section>
 </section>
+
 </header>
     <!-- Línea horizontal divisoria -->
     <div class="container">
         <h4 id="destacados">Destacados</h4>
         <hr class="linea"/>
-=======
-        <!---columna centro--->
-        <div class="col11 col-sm col-lg">
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit. At aut similique ex praesentium atque
-          aliquam facilis eum quibusdam quis dolorum debitis, libero quidem vel eaque ab et pariatur.
-          Mollitia, quos Lorem, ipsum dolor sit amet consectetur adipisicing elit. Porro aliquam corrupti ipsa
-          velit sunt necessitatibus debitis nostrum deleniti reiciendis, dolorum similique facere enim
-          distinctio, fugit possimus. Recusandae obcaecati porro nostrum?
-          <div class="icon2"> <i class=""></i><i class="fa-solid fa-mountain"></i></div>
-        </div>
-        <!---columna derecha--->
-        <div class="col11 col-sm col-lg">
-          <div class="icon1"> <i class=""></i><i class="fa-solid fa-route"></i></div>
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit. At aut similique ex praesentium atque
-          aliquam facilis eum quibusdam quis dolorum debitis, libero quidem vel eaque ab et pariatur.
-          Mollitia, quos Lorem, ipsum dolor sit amet consectetur adipisicing elit. Porro aliquam corrupti ipsa
-          velit sunt necessitatibus debitis nostrum deleniti reiciendis, dolorum similique facere enim
-          distinctio, fugit possimus. Recusandae obcaecati porro nostrum?
-        </div>
-      </div>
->>>>>>> contacto
     </div>
-  </section>
-</section>
-</header>
-<!-- Línea horizontal divisoria -->
-<div class="container">
-  <h4 id="destacados">Destacados</h4>
-  <hr class="linea" />
-</div>
-<!-- Sección de tarjetas (CARDs) -->
-<section class="container">
-  <div class="row">
-    <div class="col-sm col-lg">
-      <div class="card-group flex-container">
+    <!-- Sección de tarjetas (CARDs) -->
+    <section class="container">
+        <div class="row">
+            <div class="col-sm col-lg">
+              <div class="card-group flex-container">
 
         <!-- Tarjeta 1 -->
-        <div class="card card1 mt-5">
+        <div class="card card1 mt-3">
           <img src="./assets/img/card1.jpg" class="card-img-top img-responsive" alt="Card1" />
           <div class="card-body">
             <h5 class="card-title card1txt">Lorem ipsum dolor sit amet</h5>
@@ -132,7 +124,7 @@
         </div>
 
         <!-- Tarjeta 2 -->
-        <div class="card card2  mt-5">
+        <div class="card card2  mt-3">
           <img src="./assets/img/card2.jpg" class="card-img-top img-responsive" alt="Card2" />
           <div class="card-body">
             <h5 class="card-title card2txt">Lorem ipsum dolor sit amet</h5>
@@ -141,98 +133,107 @@
         </div>
 
         <!-- Tarjeta 3 -->
-        <div class="card card3  mt-5">
+        <div class="card card3  mt-3">
           <img src="./assets/img/card3.jpg" class="card-img-top img-responsive" alt="Card3" />
           <div class="card-body">
             <h5 class="card-title card3txt">Lorem ipsum dolor sit amet</h5>
             <p class="card-text card3txt">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
           </div>
         </div>
-        <!-- Tarjeta 4 -->
-        <div class="card card4  mt-5">
-          <img src="./assets/img/card4.jpg" class="card-img-top img-responsive" alt="Card4" />
-          <div class="card-body">
+         <!-- Tarjeta 4 -->
+         <div class="card card4  mt-3">
+            <img src="./assets/img/card4.jpg" class="card-img-top img-responsive" alt="Card4" />
+            <div class="card-body">
             <h5 class="card-title">Lorem ipsum dolor sit amet</h5>
             <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-          </div>
+            </div>
         </div>
-      </div>
     </div>
-  </div>
-</section>
-<!-- Línea divisoria -->
-<div class="container">
-  <hr class="linea" />
-</div>
+    </div>
+      </div>
+    </section>
+      <!-- Línea divisoria -->
+      <div class="container">
+        <hr class="linea"/>
+      </div>
+  
+      <h4 id="contacto" class="container">Contacto</h4>
+      
 
-<h4 id="contacto" class="container">Contacto</h4>
-
-<!-- Formulario de contacto -->
-<form class="form-contenedor">
-<div class="mb-3">
-  <label for="exampleFormControlInput1" class="form-label">nombre</label>
-  <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="">
-</div>
-<div class="mb-3">
-  <label for="exampleFormControlInput1" class="form-label">Asunto</label>
-  <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="">
-</div>
-<div class="mb-3">
-  <label for="exampleFormControlTextarea1" class="form-label">mensaje</label>
-  <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
-</div>
-<button type="button" class="btn btn-secondary" data-bs-toggle="tooltip" data-bs-placement="left" data-bs-title="Tooltip on left">
-  Enviar 
-</button>
-</form>
 
 <section id="section3">
-  <footer>
-    <div class="container">
-      <div id="rrss">
-        <ul class="flex-item">
-          <li>
-            <a class="logoText" href="#">VIAJES CHILE</a>
+    <footer>
+        <div class="container">   
+          <div id="rrss">
+            <ul class="flex-item">
+              <li>    
+                <a class="logoText" href="#">VIAJES CHILE</a>
+          
+                <a href="https://www.facebook.com/" target="_blank"
+                  ><i
+                    class="fab fa-facebook-square fa-2x"
+                    aria-hidden="true"
+                    data-toggle="tooltip"
+                    data-placement="top"
+                    title="Facebook"
+                  ></i
+                ></a>
+              </li>
 
-            <a href="https://www.facebook.com/" target="_blank"><i class="fab fa-facebook-square fa-2x"
-                aria-hidden="true" data-toggle="tooltip" data-placement="top" title="Facebook"></i></a>
-          </li>
+              <li>
+                <a href="https://twitter.com/" target="_blank"
+                  ><i
+                    class="fab fa-twitter-square fa-2x"
+                    aria-hidden="true"
+                    data-toggle="tooltip"
+                    data-placement="top"
+                    title="Twitter"
+                  ></i
+                ></a>
+              </li>
 
-          <li>
-            <a href="https://twitter.com/" target="_blank"><i class="fab fa-twitter-square fa-2x" aria-hidden="true"
-                data-toggle="tooltip" data-placement="top" title="Twitter"></i></a>
-          </li>
+              <li>
+                <a href="https://www.linkedin.com" target="_blank"
+                  ><i
+                    class="fab fa-linkedin fa-2x btn-secondary"
+                    aria-hidden="true"
+                    data-toggle="tooltip"
+                    data-placement="top"
+                    title="LinkedIn"
+                  ></i
+                ></a>
+              </li>
+              <li>
+                <a href="https://www.instagram.com/" target="_blank"
+                  ><i
+                    class="fab fa-instagram fa-2x"
+                    aria-hidden="true"
+                    data-toggle="tooltip"
+                    data-placement="top"
+                    title="Instagram"
+                  ></i
+                ></a>
+              </li>
 
-          <li>
-            <a href="https://www.linkedin.com" target="_blank"><i class="fab fa-linkedin fa-2x btn-secondary"
-                aria-hidden="true" data-toggle="tooltip" data-placement="top" title="LinkedIn"></i></a>
-          </li>
-          <li>
-            <a href="https://www.instagram.com/" target="_blank"><i class="fab fa-instagram fa-2x" aria-hidden="true"
-                data-toggle="tooltip" data-placement="top" title="Instagram"></i></a>
-          </li>
+              <li>
+                <a href="https://github.com/patriciolavin/ViajesChile" target="_blank"
+                  ><i
+                    class="fab fa-github-square fa-2x"
+                    aria-hidden="true"
+                    data-toggle="tooltip"
+                    data-placement="top"
+                    title="GitHub"
+                  ></i
+                ></a>
+              </div>
+              </li>
+            </ul>
+        </div>
+      </footer>
 
-          <li>
-            <a href="https://github.com/patriciolavin/ViajesChile" target="_blank"><i class="fab fa-github-square fa-2x"
-                aria-hidden="true" data-toggle="tooltip" data-placement="top" title="GitHub"></i></a>
-      </div>
-      </li>
-      </ul>
-    </div>
-  </footer>
+
 </section>
 
 <body>
-  <script src="https://code.jquery.com/jquery-3.6.0.min.js"
-    integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-    crossorigin="anonymous"></script>
-    <script
-    src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
-    integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
-    crossorigin="anonymous"
-  ></script>
-</body>
-
-</html>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+</body></html>
