--- a/index.html
+++ b/index.html
@@ -156,10 +156,27 @@
       <div class="container">
         <hr class="linea"/>
       </div>
-  
-      <h4 id="contacto" class="container">Contacto</h4>
-      
-
+     
+      <form> 
+        <div class="form-control"></div>
+        <h4 id="contacto" class="container">Contacto</h4>
+        <div class="mb-3">
+          <label for="exampleFormControlInput1" class="form-label">nombre</label>
+          <input type="email" class="form-control" id="exampleFormControlInput1">
+        </div>
+    </div>
+    <div class="mb-3">
+        <label for="exampleFormControlInput1" class="form-label">Asunto</label>
+        <input type="email" class="form-control" id="exampleFormControlInput1">
+      </div>
+      <div class="mb-3">
+        <label for="exampleFormControlTextarea1" class="form-label">mensaje</label>
+        <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+      </div>
+      <button type="button" class="btn btn-secondary" data-bs-toggle="tooltip" data-bs-placement="left" data-bs-title="Tooltip on left">
+        enviar
+      </button>
+    </form>
 
 <section id="section3">
     <footer>
