--- a/index.html
+++ b/index.html
@@ -157,8 +157,7 @@
         <hr class="linea"/>
       </div>
      
-      <form> 
-        <div class="form-control"></div>
+      <form class="contenedor-form"> 
         <h4 id="contacto" class="container">Contacto</h4>
         <div class="mb-3">
           <label for="exampleFormControlInput1" class="form-label">nombre</label>
